# dbos-transact-py

dbos-dash/: Makefile  pyproject.toml
dbos-dash/dbos_dash/: __init__.py  __main__.py  app.py  config.py  models.py
dbos-dash/dbos_dash/routes/: health.py  workflows.py
dbos-dash/dbos_dash/workflows/: __init__.py  etl.py  greeting.py  orchestrator.py
dbos-dash/tests/: conftest.py  test_health.py  test_workflow_routes.py
dbos-dash/web/: index.html  package-lock.json  package.json
dbos-dash/web/src/: App.tsx
dbos-dash/web/src/api/: client.ts
dbos-dash/web/src/components/: Layout.tsx  StepTimeline.tsx
dbos-dash/web/src/pages/: Dashboard.tsx  QueueView.tsx  WorkflowDetail.tsx  WorkflowList.tsx
dbos-dash/web/src/utils/: parse.ts
open-conductor/: Makefile  README.md  pyproject.toml
open-conductor/examples/: connect_app.py
open-conductor/open_conductor/: __init__.py  __main__.py  config.py  executor_handler.py  executor_plugin.py
open-conductor/open_conductor/conductor/: executor_manager.py  protocol.py  websocket.py
open-conductor/open_conductor/db/: connection.py  queries.py
open-conductor/open_conductor/server/: app.py  deps.py  models.py
open-conductor/open_conductor/server/routes/: apps.py  system.py  workflows.py
open-conductor/tests/: conftest.py  test_api.py  test_executor_manager.py  test_websocket.py
open-conductor/web/: index.html  package-lock.json  package.json
open-conductor/web/src/: App.tsx
open-conductor/web/src/api/: client.ts
open-conductor/web/src/components/: Layout.tsx  StatusBadge.tsx  StepTimeline.tsx
(+8 files in other folders)
