[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "open-conductor"
version = "0.1.0"
description = "Self-hosted DBOS Conductor - manages DBOS workflows via WebSocket proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic-settings>=2.0.0",
    "dbos>=1.0.0",
]

[project.optional-dependencies]
db = [
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
]

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
